--- a/index.html
+++ b/index.html
@@ -1,25 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Rolling Game - Un juego de adivinanza. Adivina el número y gana premios">
-    <meta name="keywords" content="juego, adivinanza, numeros, mayor, menor, azar, suerte">
-    <meta name="author" content="Juan Diego Quintana">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <meta
+      name="description"
+      content="Rolling Game - Un juego de adivinanza. Adivina el número y gana premios"
+    />
+    <meta
+      name="keywords"
+      content="juego, adivinanza, numeros, mayor, menor, azar, suerte"
+    />
+    <meta name="author" content="Juan Diego Quintana" />
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Rolling Game</title>
-</head>
-<body>
+  </head>
+  
+  <body>
+    <header>
+      <nav class="navbar bg-primary shadow ">
+        <div class="container d-flex justify-content-center">
+          <img
+            src="./assets/logo.png"
+            alt="Logo"
+            class="d-inline-block align-text-top img-fluid widthLogo"
+          />
+          <a class="navbar-brand ps-2 text-uppercase fw-bold text-white" href="./index.html"> Rolling Game</a>
+        </div>
+      </nav>
 
-    <header></header>
-    
-    <body></body>
+      <div class="bg-black ">
+        <p class="text-white py-2 text-center fs-3">¡Bienvenidos a Rolling Game!</p>
+      </div>
+    </header>
 
-    <footer></footer>
+    <main></main>
 
+    <footer class="bg-black p-3">
+        <p class="text-center text-white text-uppercase fw-bold">Todos los Derechos Reservados &copy; 2023 - Creador por <a href="https://www.linkedin.com/in/juan-diego-quintana-b5a186211/" target="_blank" class="link-primary">Juan Diego Quintana</a></p>
+    </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/main.js"></script>
-</body>
+  </body>
 </html>
